--- a/HighLandirect/App.xaml
+++ b/HighLandirect/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="HighLandirect.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="Application_Startup">
+             Startup="Application_Startup"
+             Exit="Application_Exit">
     
     <Application.Resources>
         <ResourceDictionary>
