--- a/HighLandirect/Domains/Reports/AtenaSeal.xaml
+++ b/HighLandirect/Domains/Reports/AtenaSeal.xaml
@@ -2,12 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:r="clr-namespace:HighLandirect.Domains.Reports"
              xmlns:c="clr-namespace:HighLandirect.Converters"
              mc:Ignorable="d"
             xmlns:vm="clr-namespace:HighLandirect.Domains"
              d:DesignHeight="1122" d:DesignWidth="793">
-    <ItemsControl ItemsSource="{Binding }" Height="950" Width="630" Margin="80,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+    <UserControl.DataContext>
+        <r:CustomerSource />
+    </UserControl.DataContext>
+    <ItemsControl ItemsSource="{Binding Customers}" Height="950" Width="630" Margin="80,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
                 <WrapPanel />
